external-crates/move/crates/move-compiler/tests/move_check/parser/copy_move_path.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/copy_move_path.move:12:9
   │
12 │         copy x.y.z;
   │         ^^^^ Move 2024 paths are not supported by current edition 'legacy'; the '2024' edition supports this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/copy_move_path.move:13:9
   │
13 │         move x.y.z;
   │         ^^^^ Move 2024 paths are not supported by current edition 'legacy'; the '2024' edition supports this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
